--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
     "    def retrieve(self, row, col) -> (int, float):\n",
     "        return self.data[row][col]\n",
     "\n",
-    "    def diagonal(self) -> object:\n",
+    "    def diagonal(self) -> Matrix:\n",
     "        matrix = []\n",
     "        for i in range(self.rows):\n",
     "            if i < self.cols:\n",
     "                matrix.append([self.data[i][i]])\n",
     "        return Matrix(matrix)\n",
     "\n",
-    "    def transpose(self) -> object:\n",
+    "    def transpose(self) -> Matrix:\n",
     "        matrix, row = [], []\n",
     "        for j in range(self.cols):\n",
     "            for i in range(self.rows):\n",
@@ -73,7 +73,7 @@
     "        return Matrix(matrix)\n",
     "\n",
     "    # TODO\n",
-    "    def inverse(self) -> object:\n",
+    "    def inverse(self) -> Matrix:\n",
     "        if self.shape[0] != self.shape[1] and self.shape[0] < 2:\n",
     "            raise Exception('Matrix is not invertible as it is a non-square matrix. Please provide a square matrix with dimensions greater than or equal to (2, 2).')\n",
     "        matrix = [[1], [0]]\n",
@@ -85,7 +85,7 @@
     "            raise Exception('Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix with dimensions greater than or equal to (2, 2).')\n",
     "        return 0\n",
     "\n",
-    "    def __add__(self, other) -> object:\n",
+    "    def __add__(self, other) -> Matrix:\n",
     "        if other.shape != self.shape:\n",
     "            raise Exception('Matrix dimensions are mismatched ({} != {}). Please add (2) matrices of the same dimensions.'.format(self.shape, other.shape))\n",
     "        data, output = self.data, []\n",
@@ -96,7 +96,7 @@
     "        self.data = data\n",
     "        return Matrix(output)\n",
     "\n",
-    "    def __sub__(self, other):\n",
+    "    def __sub__(self, other) -> Matrix:\n",
     "        if other.shape != self.shape:\n",
     "            raise Exception('Matrix dimensions are mismatched ({} != {}). Please subtract (2) matrices of the same dimensions.'.format(self.shape, other.shape))\n",
     "        data, output = self.data, []\n",
@@ -107,7 +107,7 @@
     "        self.data = data\n",
     "        return Matrix(output)\n",
     "\n",
-    "    def __lmul__(self, scalar) -> object:\n",
+    "    def __mul__(self, scalar) -> Matrix:\n",
     "        if isinstance(scalar, (int, float)) == False:\n",
     "            raise Exception('Scalar must be of type int or float only.')\n",
     "        data, output = self.data, []\n",
@@ -118,27 +118,11 @@
     "        self.data = data\n",
     "        return Matrix(output)\n",
     "\n",
-    "    def __rmul__(self, scalar) -> object:\n",
-    "        if isinstance(scalar, (int, float)) == False:\n",
-    "            raise Exception('Scalar must be of type int or float only.')\n",
-    "        data, output = self.data, []\n",
-    "        for i in range(self.rows):\n",
-    "            output.append([])\n",
-    "            for j in range(self.cols):\n",
-    "                output[i].append(self.data[i][j] * scalar)\n",
-    "        self.data = data\n",
-    "        return Matrix(output)\n",
+    "    def __lmul__(self, scalar) -> Matrix:\n",
+    "        self.__mul__(scalar)\n",
     "\n",
-    "    def __mul__(self, scalar) -> object:\n",
-    "        if isinstance(scalar, (int, float)) == False:\n",
-    "            raise Exception('Scalar must be of type int or float only.')\n",
-    "        data, output = self.data, []\n",
-    "        for i in range(self.rows):\n",
-    "            output.append([])\n",
-    "            for j in range(self.cols):\n",
-    "                output[i].append(self.data[i][j] * scalar)\n",
-    "        self.data = data\n",
-    "        return Matrix(output)\n",
+    "    def __rmul__(self, scalar) -> Matrix:\n",
+    "        self.__mul__(scalar)\n",
     "\n",
     "    # TODO\n",
     "    #def __mul__(self, other):\n",
@@ -159,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +167,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 505,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +212,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 507,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +238,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 508,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +264,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 509,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -300,13 +284,13 @@
        "<class: 'Matrix'>\n",
        "Dimensions: 4 row(s) x 4 column(s)\n",
        " [[1, 0, 0, 0],\n",
-       "  [0, 2, 2, 0],\n",
+       "  [0, 2, 2, 0.0],\n",
        "  [0, 0, 3, 0],\n",
        "  [0, 0, 0, 4]]\n",
        "Size: 16"
       ]
      },
-     "execution_count": 510,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +316,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 511,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -354,11 +338,11 @@
        " [[2, 0, 0, 0],\n",
        "  [0, 4, 0, 0],\n",
        "  [0, 4, 6, 0],\n",
-       "  [0, 0, 0, 8]]\n",
+       "  [0, 0.0, 0, 8]]\n",
        "Size: 16"
       ]
      },
-     "execution_count": 512,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +368,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 513,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +394,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 514,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +420,7 @@
        "Size: 4"
       ]
      },
-     "execution_count": 515,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +453,7 @@
        "Size: 2"
       ]
      },
-     "execution_count": 517,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +476,7 @@
        "Size: 1"
       ]
      },
-     "execution_count": 518,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +509,7 @@
        "Size: 2"
       ]
      },
-     "execution_count": 520,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,15 +520,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-521-2b04fd954c7e>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-19-2b04fd954c7e>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-521-2b04fd954c7e>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    A.fill(0:4, 0:1, 7)\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-2b04fd954c7e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    A.fill(0:4, 0:1, 7)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -554,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -563,13 +547,35 @@
        "3"
       ]
      },
-     "execution_count": 525,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "A.retrieve(2, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Matrix dimensions are mismatched ((4, 4) != (2, 1)). Please add (2) matrices of the same dimensions.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-17a53b3d2418>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mA\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-eae122f0278c>\u001b[0m in \u001b[0;36m__add__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     80\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__add__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Matrix dimensions are mismatched ({} != {}). Please add (2) matrices of the same dimensions.'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     83\u001b[0m         \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: Matrix dimensions are mismatched ((4, 4) != (2, 1)). Please add (2) matrices of the same dimensions."
+     ]
+    }
+   ],
+   "source": [
+    "A+B"
    ]
   }
  ],
@@ -589,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
