--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -12,7 +12,7 @@
     "    \n",
     "    def __init__(self, data):\n",
     "        if self.check_integrity(data) == False:\n",
-    "            raise Exception('Matrix is incorrectly configured with row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions.')\n",
+    "            raise Exception('Matrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions.')\n",
     "        self.data = data\n",
     "        self.rows = len(data)\n",
     "        self.cols = len(data[0])\n",
@@ -36,6 +36,10 @@
     "        # Check if provided matrix has consistent dimensions\n",
     "        ncols = [len(x) for x in data]\n",
     "        if sum(ncols) / len(ncols) != ncols[0]:\n",
+    "            return False\n",
+    "        \n",
+    "        # Check if provided matrix has empty columns\n",
+    "        if ncols[0] == 0:\n",
     "            return False\n",
     "        \n",
     "        # Check if provided matrix contains values of type int or float only\n",
@@ -787,6 +791,38 @@
    ],
    "source": [
     "A+B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = Matrix([[]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class: 'Matrix'>\n",
+       "Dimensions: 1 row(s) x 0 column(s)\n",
+       " [[]]\n",
+       "Size: 0"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C"
    ]
   }
  ],
