--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Matrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mMatrix\u001b[39;00m:\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, data):\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcheck_integrity(data) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m:\n",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36mMatrix\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mretrieve\u001b[39m(\u001b[38;5;28mself\u001b[39m, row, col) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m (\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mfloat\u001b[39m):\n\u001b[1;32m     56\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata[row][col]\n\u001b[0;32m---> 58\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdiagonal\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[43mMatrix\u001b[49m:\n\u001b[1;32m     59\u001b[0m     matrix \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrows):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Matrix' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -77,7 +90,7 @@
     "        for i in range(self.rows):\n",
     "            for j in range(self.cols):\n",
     "                matrix.append(self.data[i][j]**2)\n",
-    "        return math.sqrt(sum(matrix))\n",
+    "        return math.sqrst(sum(matrix))\n",
     "\n",
     "    def transpose(self) -> Matrix:\n",
     "        matrix, row = [], []\n",
@@ -99,7 +112,25 @@
     "    def determinant(self) -> float:\n",
     "        if self.shape[0] != self.shape[1] and self.shape[0] < 2:\n",
     "            raise Exception('Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix with dimensions greater than or equal to (2, 2).')\n",
-    "        return 0\n",
+    "\n",
+    "        matrix, data = self.data, self.data\n",
+    "        indices = list(range(len(matrix)))\n",
+    "        det = 0\n",
+    "\n",
+    "        if len(matrix) == 2 and len(matrix[0]) == 2:\n",
+    "            det = matrix[0][0] * matrix[1][1] - matrix[1][0] * matrix[0][1]\n",
+    "            return det\n",
+    "        \n",
+    "        for focus_column in indices:\n",
+    "            matrix.remove(matrix[0])\n",
+    "            rows = len(matrix)\n",
+    "            for i in range(rows):\n",
+    "                matrix[i] = matrix[i][0:focus_column].extend(matrix[i][focus_column+1:])\n",
+    "\n",
+    "        sub_det = Matrix(matrix).determinant()\n",
+    "        det += (-1)**(focus_column % 2) * matrix[0][focus_column] * sub_det\n",
+    "\n",
+    "        return det\n",
     "\n",
     "    def __add__(self, other) -> Matrix:\n",
     "        if other.shape != self.shape:\n",
@@ -233,9 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Matrix' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m A \u001b[38;5;241m=\u001b[39m \u001b[43mMatrix\u001b[49m([[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m4\u001b[39m]])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Matrix' is not defined"
+     ]
+    }
+   ],
    "source": [
     "A = Matrix([[1, 0, 0, 0], [0, 2, 2, 0], [0, 0, 3, 0], [0, 0, 0, 4]])"
    ]
@@ -828,7 +871,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -842,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
