--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,6 +105,7 @@
     "\n",
     "        if len(matrix) == 2 and len(matrix[0]) == 2:\n",
     "            det = matrix[0][0] * matrix[1][1] - matrix[1][0] * matrix[0][1]\n",
+    "            self.data = data\n",
     "            return det\n",
     "        \n",
     "        for focus_column in indices:\n",
@@ -115,7 +116,8 @@
     "\n",
     "        sub_det = Matrix(matrix).determinant()\n",
     "        det += (-1)**(focus_column % 2) * matrix[0][focus_column] * sub_det\n",
-    "\n",
+    "        self.data = data\n",
+    "        \n",
     "        return det\n",
     "\n",
     "    def __add__(self, other) -> object:\n",
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +276,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,6 +843,54 @@
       ]
      },
      "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [66]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [62]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    105\u001b[0m     rows \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(matrix)\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(rows):\n\u001b[0;32m--> 107\u001b[0m         matrix[i] \u001b[38;5;241m=\u001b[39m \u001b[43mmatrix\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43mfocus_column\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mextend(matrix[i][focus_column\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m:])\n\u001b[1;32m    109\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m Matrix(matrix)\u001b[38;5;241m.\u001b[39mdeterminant()\n\u001b[1;32m    110\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "A.determinant()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class: 'Matrix'>\n",
+       "Dimensions: 4 row(s) x 4 column(s)\n",
+       " [[1, 0, 0, 0],\n",
+       "  [0, 2, 2, 0],\n",
+       "  [0, 0, 3, 0],\n",
+       "  [0, 0, 0, 4]]\n",
+       "Size: 16"
+      ]
+     },
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
