Function: Determinant of Matrix.

--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,19 +105,21 @@
     "\n",
     "        if len(matrix) == 2 and len(matrix[0]) == 2:\n",
     "            det = matrix[0][0] * matrix[1][1] - matrix[1][0] * matrix[0][1]\n",
-    "            self.data = data\n",
     "            return det\n",
     "        \n",
     "        for focus_column in indices:\n",
-    "            matrix.remove(matrix[0])\n",
+    "            #matrix.remove(matrix[0])\n",
     "            rows = len(matrix)\n",
-    "            for i in range(rows):\n",
-    "                matrix[i] = matrix[i][0:focus_column].extend(matrix[i][focus_column+1:])\n",
+    "            for i in range(1, rows):\n",
+    "                principal_minor = matrix[i][0:focus_column]\n",
+    "                principal_minor.extend(matrix[i][focus_column+1:])\n",
+    "                matrix[i] = principal_minor\n",
+    "            print(matrix[1:])\n",
     "\n",
-    "        sub_det = Matrix(matrix).determinant()\n",
+    "        sub_matrix = Matrix(matrix[1:])\n",
+    "        sub_det = sub_matrix.determinant()\n",
     "        det += (-1)**(focus_column % 2) * matrix[0][focus_column] * sub_det\n",
-    "        self.data = data\n",
-    "        \n",
+    "\n",
     "        return det\n",
     "\n",
     "    def __add__(self, other) -> object:\n",
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +278,7 @@
        "Size: 16"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -306,8 +308,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [32]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmagnitude\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [27]\u001b[0m, in \u001b[0;36mMatrix.magnitude\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmagnitude\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 67\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatrix must be a row or column vector only.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     68\u001b[0m     matrix \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrows):\n",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmagnitude\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mMatrix.magnitude\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmagnitude\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 67\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatrix must be a row or column vector only.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     68\u001b[0m     matrix \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrows):\n",
       "\u001b[0;31mException\u001b[0m: Matrix must be a row or column vector only."
      ]
     }
@@ -827,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -835,14 +837,14 @@
       "text/plain": [
        "<class: 'Matrix'>\n",
        "Dimensions: 4 row(s) x 4 column(s)\n",
-       " [[7, 5, 0, 0],\n",
-       "  [7, 5, 2, 0],\n",
-       "  [7, 0, 3, 0],\n",
-       "  [7, 0, 0, 4]]\n",
+       " [[1, 0, 0, 0],\n",
+       "  [0, 2, 2, 0],\n",
+       "  [0, 0, 3, 0],\n",
+       "  [0, 0, 0, 4]]\n",
        "Size: 16"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,19 +855,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 2, 0], [0, 3, 0], [0, 0, 4]]\n",
+      "[[2, 0], [0, 0], [0, 4]]\n",
+      "[[2, 0], [0, 0], [0, 4]]\n",
+      "[[2, 0], [0, 0], [0, 4]]\n",
+      "[[0], [4]]\n",
+      "[[0], [4]]\n",
+      "[[0], [4]]\n",
+      "[[]]\n",
+      "[[]]\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Matrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [66]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [62]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    105\u001b[0m     rows \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(matrix)\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(rows):\n\u001b[0;32m--> 107\u001b[0m         matrix[i] \u001b[38;5;241m=\u001b[39m \u001b[43mmatrix\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43mfocus_column\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mextend(matrix[i][focus_column\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m:])\n\u001b[1;32m    109\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m Matrix(matrix)\u001b[38;5;241m.\u001b[39mdeterminant()\n\u001b[1;32m    110\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [45]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[1;32m    111\u001b[0m sub_matrix \u001b[38;5;241m=\u001b[39m Matrix(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[0;32m--> 112\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m \u001b[43msub_matrix\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    113\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m det\n",
+      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[1;32m    111\u001b[0m sub_matrix \u001b[38;5;241m=\u001b[39m Matrix(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[0;32m--> 112\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m \u001b[43msub_matrix\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    113\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m det\n",
+      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    108\u001b[0m         matrix[i] \u001b[38;5;241m=\u001b[39m principal_minor\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;28mprint\u001b[39m(matrix[\u001b[38;5;241m1\u001b[39m:])\n\u001b[0;32m--> 111\u001b[0m sub_matrix \u001b[38;5;241m=\u001b[39m \u001b[43mMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmatrix\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    112\u001b[0m sub_det \u001b[38;5;241m=\u001b[39m sub_matrix\u001b[38;5;241m.\u001b[39mdeterminant()\n\u001b[1;32m    113\u001b[0m det \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m(focus_column \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m*\u001b[39m matrix[\u001b[38;5;241m0\u001b[39m][focus_column] \u001b[38;5;241m*\u001b[39m sub_det\n",
+      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36mMatrix.__init__\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, data):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcheck_integrity(data) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m:\n\u001b[0;32m----> 7\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrows \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n",
+      "\u001b[0;31mException\u001b[0m: Matrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions."
      ]
     }
    ],
