--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,20 @@
     "    def __init__(self, data):\n",
     "        if self.check_integrity(data) == False:\n",
     "            raise Exception('Matrix is incorrectly configured with empty matrix or row, column, or data type mismatch. Please provide a list of lists containing only ints or floats of consistent dimensions.')\n",
+    "\n",
     "        self.data = data\n",
     "        self.rows = len(data)\n",
     "        self.cols = len(data[0])\n",
     "        self.shape = (self.rows, self.cols)\n",
     "        self.size = self.rows * self.cols\n",
     "\n",
+    "\n",
     "    def check_integrity(self, data) -> bool:\n",
     "        '''\n",
     "        Args - data (list): ...\n",
     "        Returns - bool\n",
     "        '''\n",
+    "\n",
     "        # Check if provided matrix is a list\n",
     "        if isinstance(data, list) == False:\n",
     "            return False\n",
@@ -48,112 +51,170 @@
     "            if sum(checks) > 0:\n",
     "                return False\n",
     "\n",
+    "        return True\n",
+    "\n",
+    "\n",
     "    def assign(self, row, col, value) -> None:\n",
     "        if isinstance(value, (int, float)) == False:\n",
     "            raise Exception('Value must be of type int or float only.')\n",
+    "\n",
     "        self.data[row][col] = value\n",
+    "\n",
     "\n",
     "    def fill(self, rows, cols, value) -> None:\n",
     "        if isinstance(value, (int, float)) == False:\n",
     "            raise Exception('Value must be of type int or float only.')\n",
+    "\n",
     "        for i in range(rows[0], rows[1], 1):\n",
     "            for j in range(cols[0], cols[1], 1):\n",
-    "                self.assign(i, j, value)\n",
-    "    \n",
+    "                self.data[i][j] = value\n",
+    "\n",
+    "\n",
     "    def retrieve(self, row, col) -> (int, float):\n",
     "        return self.data[row][col]\n",
     "\n",
+    "\n",
     "    def diagonal(self) -> object:\n",
-    "        matrix = []\n",
+    "        output = []\n",
+    "\n",
     "        for i in range(self.rows):\n",
     "            if i < self.cols:\n",
-    "                matrix.append([self.data[i][i]])\n",
-    "        return Matrix(matrix)\n",
-    "    \n",
+    "                output.append([self.data[i][i]])\n",
+    "\n",
+    "        return Matrix(output)\n",
+    "\n",
+    "\n",
     "    def magnitude(self) -> float:\n",
     "        if not (self.shape[0] == 1 or self.shape[1] == 1):\n",
     "            raise Exception('Matrix must be a row or column vector only.')\n",
-    "        matrix = []\n",
+    "\n",
+    "        output = []\n",
+    "\n",
     "        for i in range(self.rows):\n",
     "            for j in range(self.cols):\n",
-    "                matrix.append(self.data[i][j]**2)\n",
-    "        return math.sqrt(sum(matrix))\n",
+    "                output.append(self.data[i][j]**2)\n",
+    "\n",
+    "        return math.sqrt(sum(output))\n",
+    "\n",
     "\n",
     "    def transpose(self) -> object:\n",
-    "        matrix, row = [], []\n",
+    "        output, row = [], []\n",
+    "\n",
     "        for j in range(self.cols):\n",
     "            for i in range(self.rows):\n",
     "                row.append(self.data[i][j])\n",
-    "            matrix.append(row)\n",
+    "            output.append(row)\n",
     "            row = []\n",
-    "        return Matrix(matrix)\n",
     "\n",
-    "    # TODO\n",
+    "        return Matrix(output)\n",
+    "\n",
+    "\n",
     "    def inverse(self) -> object:\n",
     "        if self.shape[0] != self.shape[1] and self.shape[0] < 2:\n",
     "            raise Exception('Matrix is not invertible as it is a non-square matrix. Please provide a square matrix.')\n",
-    "        matrix = [[1], [0]]\n",
-    "        return Matrix(matrix)\n",
+    "\n",
+    "        det = self.determinant()\n",
+    "\n",
+    "        if det == 0:\n",
+    "            raise Exception('Matrix is not invertible as the determinant is 0.')\n",
+    "\n",
+    "        data = self.data\n",
+    "\n",
+    "        # Calculate the Inverse of the Determinant\n",
+    "        inv_det = 1 / det\n",
+    "\n",
+    "        # Calculate Determinants of Principal Minors\n",
+    "        adjugate_matrix = []\n",
+    "\n",
+    "        for i in range(self.shape[0]):\n",
+    "            adjugate_matrix.append([])\n",
+    "            for j in range(self.shape[1]):\n",
+    "                principal_minor = self.data\n",
+    "                for row in range(len(principal_minor)):\n",
+    "                    principal_minor[row].pop(j)\n",
+    "                principal_minor.pop(i)\n",
+    "                det_pm = Matrix(principal_minor).determinant()\n",
+    "                adjugate_matrix[i].append(det_pm)\n",
+    "\n",
+    "        # Calculate the Product of Cofactors, Inverse of Determinant, and Adjugate Matrix\n",
+    "        for i in range(self.shape[0]):\n",
+    "            for j in range(self.shape[1]):\n",
+    "                adjugate_matrix[i][j] *= (-1)**(i + j) * inv_det\n",
+    "\n",
+    "        return Matrix(adjugate_matrix)\n",
+    "\n",
     "\n",
     "    def determinant(self) -> float:\n",
     "        if self.shape[0] != self.shape[1]:\n",
     "            raise Exception('Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix.')\n",
     "\n",
-    "        matrix, det = self.data, 0\n",
-    "        indices = list(range(len(matrix)))\n",
+    "        output, det = self.data, 0\n",
+    "        indices = list(range(len(output)))\n",
     "\n",
-    "        if len(matrix) == 1 and len(matrix[0]) == 1:\n",
-    "            return matrix[0][0]\n",
+    "        if len(output) == 1 and len(output[0]) == 1:\n",
+    "            return output[0][0]\n",
     "\n",
-    "        if len(matrix) == 2 and len(matrix[0]) == 2:\n",
-    "            return matrix[0][0] * matrix[1][1] - matrix[1][0] * matrix[0][1]\n",
+    "        if len(output) == 2 and len(output[0]) == 2:\n",
+    "            return output[0][0] * output[1][1] - output[1][0] * output[0][1]\n",
     "\n",
     "        for focus_column in indices:\n",
-    "            principal_minor = matrix[1:]\n",
-    "            rows = len(principal_minor)\n",
-    "            for i in range(rows):\n",
-    "                principal_minor[i] = principal_minor[i][0:focus_column] + principal_minor[i][focus_column+1:]\n",
-    "\n",
-    "        print(principal_minor)\n",
+    "            principal_minor = output[1:]\n",
+    "            for row in range(len(principal_minor)):\n",
+    "                principal_minor[row] = principal_minor[row][0:focus_column] + principal_minor[row][focus_column+1:]\n",
     "\n",
     "        sub_det = Matrix(principal_minor).determinant()\n",
-    "        det += (-1)**(focus_column % 2) * matrix[0][focus_column] * sub_det\n",
+    "        det += (-1)**(focus_column % 2) * output[0][focus_column] * sub_det\n",
     "\n",
     "        return det\n",
+    "\n",
     "\n",
     "    def __add__(self, other) -> object:\n",
     "        if other.shape != self.shape:\n",
     "            raise Exception('Matrix dimensions are mismatched ({} != {}). Please add (2) matrices of the same dimensions.'.format(self.shape, other.shape))\n",
+    "\n",
     "        data, output = self.data, []\n",
+    "\n",
     "        for i in range(self.rows):\n",
     "            output.append([])\n",
     "            for j in range(self.cols):\n",
     "                output[i].append(self.data[i][j] + other.data[i][j])\n",
+    "\n",
     "        self.data = data\n",
+    "\n",
     "        return Matrix(output)\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def __ladd__(self, other) -> object:\n",
     "        return self.__add__(other)\n",
+    "\n",
     "\n",
     "    def __radd__(self, other) -> object:\n",
     "        return self.__add__(other)\n",
     "\n",
+    "\n",
     "    def __sub__(self, other) -> object:\n",
     "        if other.shape != self.shape:\n",
     "            raise Exception('Matrix dimensions are mismatched ({} != {}). Please subtract (2) matrices of the same dimensions.'.format(self.shape, other.shape))\n",
+    "\n",
     "        data, output = self.data, []\n",
+    "\n",
     "        for i in range(self.rows):\n",
     "            output.append([])\n",
     "            for j in range(self.cols):\n",
     "                output[i].append(self.data[i][j] - other.data[i][j])\n",
+    "\n",
     "        self.data = data\n",
+    "\n",
     "        return Matrix(output)\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def __lsub__(self, other) -> object:\n",
     "        return self.__sub__(other)\n",
     "\n",
+    "\n",
     "    def __rsub__(self, other) -> object:\n",
     "        return self.__sub__(other)\n",
+    "\n",
     "\n",
     "    def __mul__(self, other) -> object:\n",
     "        if isinstance(other, Matrix) == False:\n",
@@ -180,18 +241,24 @@
     "                    output[i].append(self.data[i][j] * other.data[i][j])\n",
     "\n",
     "        self.data = data\n",
+    "\n",
     "        return Matrix(output)\n",
+    "\n",
     "\n",
     "    def __lmul__(self, other) -> object:\n",
     "        return self.__mul__(other)\n",
     "\n",
+    "\n",
     "    def __rmul__(self, other) -> object:\n",
     "        return self.__mul__(other)\n",
+    "\n",
     "\n",
     "    def __matmul__(self, other) -> object:\n",
     "        if self.cols != other.rows:\n",
     "            raise Exception('Matrix dimensions are mismatched for matrix multiplication ({} @ {}: {} != {})'.format(self.shape, other.shape, self.shape[1], other.shape[0]))\n",
+    "\n",
     "        data, output = self.data, []\n",
+    "\n",
     "        n, m = self.shape[1], self.shape[1]\n",
     "        for i in range(n):\n",
     "            output.append([])\n",
@@ -200,14 +267,19 @@
     "                for k in range(n):\n",
     "                    value += self.data[i][k] * other.data[k][j]\n",
     "                output[i].append(value)\n",
+    "\n",
     "        self.data = data\n",
+    "\n",
     "        return Matrix(output)\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def __lmatmul__(self, other) -> object:\n",
     "        return __matmul__(self, other)\n",
-    "    \n",
+    "\n",
+    "\n",
     "    def __rmatmul__(self, other) -> object:\n",
     "        return __matmul__(self, other)\n",
+    "\n",
     "\n",
     "    def __repr__(self) -> str:\n",
     "        matrix = str(self.data).replace('],', '],\\n ')\n",
@@ -216,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,21 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<class: 'Matrix'>\n",
-       "Dimensions: 3 row(s) x 3 column(s)\n",
-       " [[5, 5, 0],\n",
-       "  [5, 5, 0],\n",
-       "  [0, 0, 1]]\n",
-       "Size: 9"
+       "Dimensions: 2 row(s) x 2 column(s)\n",
+       " [[1, 0],\n",
+       "  [0, 1]]\n",
+       "Size: 4"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +330,7 @@
        "1"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,23 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[5, 5], [0, 0]]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,6 +367,35 @@
    "source": [
     "A.determinant()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "pop index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mMatrix.inverse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    124\u001b[0m principal_minor \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\n\u001b[1;32m    125\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(principal_minor)):\n\u001b[0;32m--> 126\u001b[0m     \u001b[43mprincipal_minor\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    127\u001b[0m principal_minor\u001b[38;5;241m.\u001b[39mpop(i)\n\u001b[1;32m    128\u001b[0m det_pm \u001b[38;5;241m=\u001b[39m Matrix(principal_minor)\u001b[38;5;241m.\u001b[39mdeterminant()\n",
+      "\u001b[0;31mIndexError\u001b[0m: pop index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "A.inverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -939,7 +1032,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -953,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
