--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,41 +109,6 @@
     "        return Matrix(output)\n",
     "\n",
     "\n",
-    "    def inverse(self) -> object:\n",
-    "        if self.shape[0] != self.shape[1] and self.shape[0] < 2:\n",
-    "            raise Exception('Matrix is not invertible as it is a non-square matrix. Please provide a square matrix.')\n",
-    "\n",
-    "        det = self.determinant()\n",
-    "\n",
-    "        if det == 0:\n",
-    "            raise Exception('Matrix is not invertible as the determinant is 0.')\n",
-    "\n",
-    "        data = self.data\n",
-    "\n",
-    "        # Calculate the Inverse of the Determinant\n",
-    "        inv_det = 1 / det\n",
-    "\n",
-    "        # Calculate Determinants of Principal Minors\n",
-    "        adjugate_matrix = []\n",
-    "\n",
-    "        for i in range(self.shape[0]):\n",
-    "            adjugate_matrix.append([])\n",
-    "            for j in range(self.shape[1]):\n",
-    "                principal_minor = self.data\n",
-    "                for row in range(len(principal_minor)):\n",
-    "                    principal_minor[row].pop(j)\n",
-    "                principal_minor.pop(i)\n",
-    "                det_pm = Matrix(principal_minor).determinant()\n",
-    "                adjugate_matrix[i].append(det_pm)\n",
-    "\n",
-    "        # Calculate the Product of Cofactors, Inverse of Determinant, and Adjugate Matrix\n",
-    "        for i in range(self.shape[0]):\n",
-    "            for j in range(self.shape[1]):\n",
-    "                adjugate_matrix[i][j] *= (-1)**(i + j) * inv_det\n",
-    "\n",
-    "        return Matrix(adjugate_matrix)\n",
-    "\n",
-    "\n",
     "    def determinant(self) -> float:\n",
     "        if self.shape[0] != self.shape[1]:\n",
     "            raise Exception('Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix.')\n",
@@ -166,6 +131,45 @@
     "        det += (-1)**(focus_column % 2) * output[0][focus_column] * sub_det\n",
     "\n",
     "        return det\n",
+    "\n",
+    "\n",
+    "    def inverse(self) -> object:\n",
+    "        if self.shape[0] != self.shape[1] and self.shape[0] < 2:\n",
+    "            raise Exception('Matrix is not invertible as it is a non-square matrix. Please provide a square matrix.')\n",
+    "\n",
+    "        det = self.determinant()\n",
+    "\n",
+    "        if det == 0:\n",
+    "            raise Exception('Matrix is not invertible as the determinant is 0.')\n",
+    "\n",
+    "        # Calculate the Inverse of the Determinant\n",
+    "        inv_det = 1 / det\n",
+    "\n",
+    "        # Calculate Determinants of Principal Minors\n",
+    "        adjugate_matrix = []\n",
+    "        data = self.data.copy()\n",
+    "\n",
+    "        for i in range(self.shape[0]):\n",
+    "            adjugate_matrix.append([])\n",
+    "            for j in range(self.shape[1]):\n",
+    "                principal_minor = data.copy()\n",
+    "                print('{}: {}'.format((i, j), principal_minor))\n",
+    "                for row in range(len(principal_minor)):\n",
+    "                    principal_minor[row].pop(j)\n",
+    "                principal_minor.pop(i)\n",
+    "                det_pm = Matrix(principal_minor).determinant()\n",
+    "                print('{}: {}'.format(det_pm, principal_minor))\n",
+    "                principal_minor = []\n",
+    "                adjugate_matrix[i].append(det_pm)\n",
+    "\n",
+    "        print(adjugate_matrix)\n",
+    "\n",
+    "        # Calculate the Product of Cofactors, Inverse of Determinant, and Adjugate Matrix\n",
+    "        for i in range(self.shape[0]):\n",
+    "            for j in range(self.shape[1]):\n",
+    "                adjugate_matrix[i][j] *= (-1)**(i + j) * inv_det\n",
+    "\n",
+    "        return Matrix(adjugate_matrix)\n",
     "\n",
     "\n",
     "    def __add__(self, other) -> object:\n",
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +314,7 @@
        "Size: 4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +334,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,25 +345,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = Matrix([[1, 0, 0], [0, 1, 0], [0, 0, 1]])"
+    "A = Matrix([[1, 2, 5], [5, 1, 1], [0, 2, 2]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "50"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,19 +374,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "pop index out of range",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0): [[1, 2, 5], [5, 1, 1], [0, 2, 2]]\n",
+      "0: [[1, 1], [2, 2]]\n",
+      "(0, 1): [[2, 5], [1, 1], [2, 2]]\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36mMatrix.inverse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    124\u001b[0m principal_minor \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\n\u001b[1;32m    125\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(principal_minor)):\n\u001b[0;32m--> 126\u001b[0m     \u001b[43mprincipal_minor\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mj\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    127\u001b[0m principal_minor\u001b[38;5;241m.\u001b[39mpop(i)\n\u001b[1;32m    128\u001b[0m det_pm \u001b[38;5;241m=\u001b[39m Matrix(principal_minor)\u001b[38;5;241m.\u001b[39mdeterminant()\n",
-      "\u001b[0;31mIndexError\u001b[0m: pop index out of range"
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [82]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [79]\u001b[0m, in \u001b[0;36mMatrix.inverse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    150\u001b[0m     principal_minor[row]\u001b[38;5;241m.\u001b[39mpop(j)\n\u001b[1;32m    151\u001b[0m principal_minor\u001b[38;5;241m.\u001b[39mpop(i)\n\u001b[0;32m--> 152\u001b[0m det_pm \u001b[38;5;241m=\u001b[39m \u001b[43mMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprincipal_minor\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    153\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(det_pm, principal_minor))\n\u001b[1;32m    154\u001b[0m principal_minor \u001b[38;5;241m=\u001b[39m []\n",
+      "Input \u001b[0;32mIn [79]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdeterminant\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m    105\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m--> 106\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    108\u001b[0m     output, det \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    109\u001b[0m     indices \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(output)))\n",
+      "\u001b[0;31mException\u001b[0m: Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix."
      ]
     }
    ],
