Function: Inverse of Matrix.

--- a/Matrix.ipynb
+++ b/Matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,22 +147,31 @@
     "\n",
     "        # Calculate Determinants of Principal Minors\n",
     "        adjugate_matrix = []\n",
-    "        data = self.data.copy()\n",
     "\n",
     "        for i in range(self.shape[0]):\n",
     "            adjugate_matrix.append([])\n",
     "            for j in range(self.shape[1]):\n",
-    "                principal_minor = data.copy()\n",
-    "                print('{}: {}'.format((i, j), principal_minor))\n",
-    "                for row in range(len(principal_minor)):\n",
+    "                #principal_minor = []\n",
+    "                #r = 0\n",
+    "                #for row in range(self.shape[0]):\n",
+    "                #    if r != i:\n",
+    "                #        principal_minor.append([])\n",
+    "                #    for col in range(self.shape[1]):\n",
+    "                #        if row != i and col != j:\n",
+    "                #            principal_minor[r].append(self.data[row][col])\n",
+    "                #    r += 1\n",
+    "                #print(principal_minor)\n",
+    "                #principal_minor = Matrix(principal_minor)\n",
+    "                #adjugate_matrix[i].append(principal_minor.determinant())\n",
+    "                principal_minor = self.data.copy()\n",
+    "                print('{}: {} / {}'.format((i, j), principal_minor, self.data))\n",
+    "                for row in range(self.shape[0]):\n",
     "                    principal_minor[row].pop(j)\n",
     "                principal_minor.pop(i)\n",
-    "                det_pm = Matrix(principal_minor).determinant()\n",
-    "                print('{}: {}'.format(det_pm, principal_minor))\n",
-    "                principal_minor = []\n",
-    "                adjugate_matrix[i].append(det_pm)\n",
-    "\n",
-    "        print(adjugate_matrix)\n",
+    "                principal_minor = Matrix(principal_minor)\n",
+    "                det = principal_minor.determinant()\n",
+    "                print('{}: {}'.format(det, principal_minor))\n",
+    "                adjugate_matrix[i].append(det)\n",
     "\n",
     "        # Calculate the Product of Cofactors, Inverse of Determinant, and Adjugate Matrix\n",
     "        for i in range(self.shape[0]):\n",
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,20 +310,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<class: 'Matrix'>\n",
-       "Dimensions: 2 row(s) x 2 column(s)\n",
-       " [[1, 0],\n",
-       "  [0, 1]]\n",
-       "Size: 4"
+       "Dimensions: 3 row(s) x 3 column(s)\n",
+       " [[2],\n",
+       "  [1],\n",
+       "  [2]]\n",
+       "Size: 9"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +344,7 @@
        "1"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +373,7 @@
        "50"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,16 +384,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0): [[1, 2, 5], [5, 1, 1], [0, 2, 2]]\n",
-      "0: [[1, 1], [2, 2]]\n",
-      "(0, 1): [[2, 5], [1, 1], [2, 2]]\n"
+      "(0, 0): [[1, 2, 5], [5, 1, 1], [0, 2, 2]] / [[1, 2, 5], [5, 1, 1], [0, 2, 2]]\n",
+      "0: <class: 'Matrix'>\n",
+      "Dimensions: 2 row(s) x 2 column(s)\n",
+      " [[1, 1],\n",
+      "  [2, 2]]\n",
+      "Size: 4\n",
+      "(0, 1): [[2, 5], [1, 1], [2, 2]] / [[2, 5], [1, 1], [2, 2]]\n"
      ]
     },
     {
@@ -393,9 +407,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [82]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minverse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[0;32mIn [79]\u001b[0m, in \u001b[0;36mMatrix.inverse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    150\u001b[0m     principal_minor[row]\u001b[38;5;241m.\u001b[39mpop(j)\n\u001b[1;32m    151\u001b[0m principal_minor\u001b[38;5;241m.\u001b[39mpop(i)\n\u001b[0;32m--> 152\u001b[0m det_pm \u001b[38;5;241m=\u001b[39m \u001b[43mMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mprincipal_minor\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeterminant\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    153\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(det_pm, principal_minor))\n\u001b[1;32m    154\u001b[0m principal_minor \u001b[38;5;241m=\u001b[39m []\n",
-      "Input \u001b[0;32mIn [79]\u001b[0m, in \u001b[0;36mMatrix.determinant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdeterminant\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[1;32m    105\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m--> 106\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    108\u001b[0m     output, det \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    109\u001b[0m     indices \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(output)))\n",
+      "\u001b[0;32m<ipython-input-178-156442ed5eb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-174-0e90ba43f6ef>\u001b[0m in \u001b[0;36minverse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    162\u001b[0m                 \u001b[0mprincipal_minor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m                 \u001b[0mprincipal_minor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprincipal_minor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 164\u001b[0;31m                 \u001b[0mdet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprincipal_minor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeterminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    165\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{}: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprincipal_minor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    166\u001b[0m                 \u001b[0madjugate_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-174-0e90ba43f6ef>\u001b[0m in \u001b[0;36mdeterminant\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mdeterminant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m         \u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m: Matrix determinant cannot be derived as it is a non-square matrix. Please provide a square matrix."
      ]
     }
@@ -1046,7 +1060,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1060,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
